[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/title_screen.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/TitleScreen.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.172549, 0.490196, 0.388235, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 100 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 353.0
margin_right = 670.0
margin_bottom = 111.0
text = "Game Title"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 115.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 412.0
margin_top = 202.0
margin_right = 612.0
margin_bottom = 283.0
rect_min_size = Vector2( 200, 0 )

[node name="PlayButton" type="Button" parent="VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 200.0
margin_bottom = 81.0
focus_mode = 0
enabled_focus_mode = 0
text = "Play"

[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
